Updated Project with Revisions
Revised Project

--- a/a_random_quote_generator-v1/index.html
+++ b/a_random_quote_generator-v1/index.html
@@ -11,10 +11,7 @@
   <body>
     <header>
       <h1>Random Quotes</h1>
-     <h2> 
-      <button id="funny-quote" class="load-quote">Show a funny quote</button>
-      <button id="inspirational-quote" class="load-quote">Show an inspirational quote</button>
-    </h2>
+      <button id="new-quote" class="load-quote">Show a new quote</button>
     </header>
     
     
